# netbox-cabinet-view

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: architecture.md  certification-ratings.md  line-art.md  offline.md  roadmap.md  scenarios.md
netbox_cabinet_view/: __init__.py  choices.py  filtersets.py  forms.py  ledger.py  models.py  navigation.py  provision.py  rack_elevation_patch.py  tables.py  template_content.py  urls.py  views.py
netbox_cabinet_view/api/: serializers.py  urls.py  views.py
netbox_cabinet_view/graphql/: schema.py  types.py
netbox_cabinet_view/management/commands/: cabinetview_assign_lineart.py  cabinetview_seed.py
netbox_cabinet_view/migrations/: 0001_initial.py  0002_grid_carrier.py  0003_rename_carrier_to_mount.py  0004_mount_profiles.py  0005_mount_face.py  0006_modulemountprofile_front_image.py  0007_devicemountprofile_front_image.py  0008_port_map.py
netbox_cabinet_view/static/netbox_cabinet_view/: cabinet_layout.css
netbox_cabinet_view/static/netbox_cabinet_view/line-art/: manifest.json  port_maps.json
netbox_cabinet_view/svg/: __init__.py  cabinets.py  front_panel.py
netbox_cabinet_view/templates/netbox_cabinet_view/: carrier.html  device_layout_tab.html  devicemountprofile.html  devicetypeprofile.html  line_art_gallery.html  modulemountprofile.html  mount.html  placement.html  placement_edit.html
netbox_cabinet_view/templates/netbox_cabinet_view/inc/: discovery_hint_card.html  rack_carrier_hosts.html  rack_mount_hosts.html  slot_ledger.html
security/: README.md  openvex.json  sbom.cdx.json
tools/: flatten_rack_svg.py
